[SPR-51] chore: 스테이징 서버 https 설정

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ out/
 ### application.yml ###
 src/main/resources/application-dev.yml
 src/main/resources/application-prod.yml
+
+### keystore.p12 ###
+src/main/resources/keystore.p12
