--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,14 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    //thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    //kakao access token을 가져오기 위한 Oauth 서버와의 통신을 위한 webclient
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    //jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     //swagger 설정
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
@@ -35,6 +43,13 @@ dependencies {
     //aws - S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+
+    //security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    //oauth 2.0
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
 }
 
 tasks.named('test') {
