--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-/src/main/resources/application-local.yml
+
 
 ### NetBeans ###
 /nbproject/private/
@@ -41,6 +41,12 @@ out/
 ### application.yml ###
 src/main/resources/application-dev.yml
 src/main/resources/application-prod.yml
+src/main/resources/application-local.yml
+
+src/test/resources/application-dev.yml
+src/test/resources/application-prod.yml
+src/test/resources/application.yml
 
 ### keystore.p12 ###
 src/main/resources/keystore.p12
+src/test/resources/keystore.p12
