[SPR-154] FCM 푸시알림 기능 구현
* [SPR-154] Chore: firebase 의존성 추가, FCMConfig 파일 작성

* [SPR-154] Feat: fcmToken 컬럼 추가

* [SPR-154] Feat: FCMRequestDto 구현중

* [SPR-154] Feat: 회원가입, 로그인 FCM 토큰 업데이트 로직 추가

* [SPR-154] Fix: firebase 버전 변경

* [SPR-154] Fear: sendMessageTo 개발중

* [SPR-154] feat: 유저 토큰 업데이트 함수 구현

* [SPR-154] feat: 관리자 회원가입/로그인 시 토큰 입력  추가

* [SPR-154] feat: 회원가입/로그인 request dto 토큰 입력 삭제 및 FCM 전송 기능 구현

* [SPR-154] fix: 파일이름 변경

* [SPR-154] fix: 파일이름 변경

* [SPR-154] fix: Dto 어노테이션 제거

* [SPR-154] fix: service 함수 수정

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     //oauth 2.0
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
+
+    //firebase
+    implementation 'com.google.firebase:firebase-admin:9.2.0'
 }
 
 tasks.named('test') {
@@ -63,5 +66,6 @@ tasks.register('copyGitSubmodule', Copy) {
     from './config'
     include '*.yml'
     include '*.p12'
+    include 'firebase/*'
     into 'src/main/resources'
 }
