--- a/.github/workflows/monthly_certificate_renewal_and_deploy-dev.yml
+++ b/.github/workflows/monthly_certificate_renewal_and_deploy-dev.yml
@@ -2,8 +2,7 @@ name: Monthly Certificate Renewal and Deployment
 
 on:
   schedule:
-    #매월 1일 자정에 실행(UTC 기준)
-    - cron: '36 * * * *'
+    - cron: '*/5 * * * *'
 
 jobs:
   update-cert-and-deploy:
