--- a/.github/workflows/monthly_certificate_renewal_and_deploy-dev.yml
+++ b/.github/workflows/monthly_certificate_renewal_and_deploy-dev.yml
@@ -3,6 +3,14 @@ name: Monthly Certificate Renewal and Deployment
 on:
   schedule:
     - cron: '*/5 * * * *'
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test'
 
 jobs:
   update-cert-and-deploy:
