--- a/.github/workflows/monthly_certificate_renewal_and_deploy-dev.yml
+++ b/.github/workflows/monthly_certificate_renewal_and_deploy-dev.yml
@@ -34,6 +34,7 @@ jobs:
           key: ${{ secrets.RELEASE_SSH_KEY }}
           source: "/home/ubuntu/keystore-dev.p12"
           target: "./config/keystore-dev.p12"
+          debug: true
 
       #서브 모듈 접근
       - name: Checkout repo
