--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,6 +3,7 @@ name: CLIMEET_DEPLOY
 on:
   push:
     branches: ["main", "release"]
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
