--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    //DB의 JSON 타입을 Domain에서 사용하기 위함
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-62:3.7.0'
 }
 
 tasks.named('test') {
