--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,6 @@ spring:
 springdoc:
   swagger-ui:
     path: /
-    operations-sorter: alpha
+    operations-sorter: method
     display-request-duration: true
+    tags-sorter: alpha
